@@ -36,6 +36,10 @@
 		$f_severity = "";
 	}
 
+	if ( !isset( $f_priority ) ) {
+		$f_priority = "";
+	}
+
 	if ( !isset( $f_profile_id ) ) {
 		$f_profile_id = "";
 	}
@@ -102,40 +106,46 @@
 </tr>
 <tr class="row-1">
 	<td class="category" width="30%">
-		<?php echo $s_category ?> <?php print_documentaion_link( "category" ) ?>:<br />
-		<span class="required">*<?php echo $s_required ?>*</span>
+		<?php echo $s_category ?> <?php print_documentaion_link( "category" ) ?>:
 	</td>
 	<td width="70%">
 		<select name="f_category">
-			<option value="" SELECTED><?php echo $s_select_category ?></option>
 			<?php print_category_option_list( $f_category ) ?>
 		</select>
 	</td>
 </tr>
 <tr class="row-2">
 	<td class="category">
-		<?php echo $s_reproducibility ?> <?php print_documentaion_link( "reproducibility" ) ?>:<br />
-		<span class="required">*<?php echo $s_required ?>*</span>
+		<?php echo $s_reproducibility ?> <?php print_documentaion_link( "reproducibility" ) ?>:
 	</td>
 	<td>
 		<select name="f_reproducibility">
-			<option value="" SELECTED><?php echo $s_select_reproducibility ?></option>
 			<?php print_enum_string_option_list( "reproducibility", $f_reproducibility ) ?>
 		</select>
 	</td>
 </tr>
 <tr class="row-1">
 	<td class="category">
-		<?php echo $s_severity ?> <?php print_documentaion_link( "severity" ) ?>:<br />
-		<span class="required">*<?php echo $s_required ?>*</span>
+		<?php echo $s_severity ?> <?php print_documentaion_link( "severity" ) ?>:
 	</td>
 	<td>
 		<select name="f_severity">
-			<option value="" SELECTED><?php echo $s_select_severity ?></option>
 			<?php print_enum_string_option_list( "severity", $f_severity ) ?>
 		</select>
 	</td>
 </tr>
+<? if ( access_level_check_greater_or_equal( DEVELOPER ) ) { ?>
+<tr class="row-2">
+	<td class="category">
+		<?php echo $s_priority ?> <?php print_documentaion_link( "priority" ) ?>:
+	</td>
+	<td>
+		<select name="f_priority">
+			<?php print_enum_string_option_list( "priority", $f_priority ) ?>
+		</select>
+	</td>
+</tr>
+<? } ?>
 <tr>
 	<td class="spacer" colspan="2">
 		&nbsp;
@@ -231,8 +241,7 @@
 </tr>
 <tr class="row-1">
 	<td class="category">
-		<?php echo $s_summary ?> <?php print_documentaion_link( "summary" ) ?>:<br />
-		<span class="required">*<?php echo $s_required ?>*</span>
+		<span class="required">*</span><?php echo $s_summary ?> <?php print_documentaion_link( "summary" ) ?>:
 	</td>
 	<td>
 		<input type="text" name="f_summary" size="80" maxlength="128" value="<?php echo $f_summary ?>">
@@ -240,8 +249,7 @@
 </tr>
 <tr class="row-2">
 	<td class="category">
-		<?php echo $s_description ?> <?php print_documentaion_link( "description" ) ?>:<br />
-		<span class="required">*<?php echo $s_required ?>*</span>
+		<span class="required">*</span><?php echo $s_description ?> <?php print_documentaion_link( "description" ) ?>:
 	</td>
 	<td>
 		<textarea name="f_description" cols="60" rows="5" wrap="virtual"><?php echo $f_description ?></textarea>
@@ -283,7 +291,10 @@
 	</td>
 </tr>
 <tr>
-	<td class="center" colspan="2">
+	<td class="left">
+		<span class="required"> * <?php echo $s_required ?></span>
+	</td>
+	<td class="center">
 		<input type="submit" value="<?php echo $s_submit_report_button ?>">
 	</td>
 </tr>
